--- a/css/styles.css
+++ b/css/styles.css
@@ -423,6 +423,15 @@ img {
   margin-right: auto;
 }
 
+.sezon__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media only screen and (max-width: 1000px) {
   .container {
     padding-left: 20px;
@@ -432,6 +441,13 @@ img {
 
 .header {
   background-image: url("../img/hero-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center 65px;
+  background-size: cover;
+}
+
+.header--sezon-1 {
+  background-image: url("../img/sezon-1-bg.jpg");
   background-repeat: no-repeat;
   background-position: center 65px;
   background-size: cover;
@@ -480,6 +496,11 @@ img {
   margin-right: 0;
 }
 
+.navbar__item--active .navbar__link {
+  color: #85CCDC;
+  text-decoration: underline;
+}
+
 .navbar__link {
   font-size: 36px;
   line-height: 42px;
@@ -497,7 +518,7 @@ img {
   display: none;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1160px) {
   .site-header__nav {
     display: none;
   }
@@ -601,11 +622,16 @@ img {
   vertical-align: middle;
 }
 
+.logo-sezon {
+  width: 154px;
+  margin-right: auto;
+}
+
 .hero {
   padding: 178px 0 360px;
 }
 
-.hero__container {
+.hero .hero__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -617,20 +643,26 @@ img {
           justify-content: center;
 }
 
+@media only screen and (max-width: 1150px) {
+  .hero .sezon__container--bottom {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 1000px) {
-  .hero {
+  .hero .hero {
     padding: 120px 0 282px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .hero {
+  .hero .hero {
     padding: 80px 0 180px;
   }
 }
 
 @media only screen and (max-width: 450px) {
-  .hero {
+  .hero .hero {
     padding: 40px 0 100px;
   }
 }
@@ -846,7 +878,7 @@ img {
 
 .intro__title {
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
   font-size: 36px;
   line-height: 42px;
 }
@@ -870,14 +902,14 @@ img {
   margin: 0 37.5px;
   padding: 0px 0 0px;
   position: relative;
-  margin-bottom: 110px;
+  margin-bottom: 120px;
 }
 
 .intro__item::before {
   content: "00";
   display: inline-block;
   position: absolute;
-  top: -10px;
+  top: -20px;
   left: 0;
   font-weight: bold;
   font-size: 96px;
@@ -936,6 +968,38 @@ img {
   content: "06";
 }
 
+.intro__item:nth-child(7)::before {
+  content: "07";
+}
+
+.intro__item:nth-child(8)::before {
+  content: "08";
+}
+
+.intro__item:nth-child(9)::before {
+  content: "09";
+}
+
+.intro__item:nth-child(10)::before {
+  content: "10";
+}
+
+.intro__item:nth-child(11)::before {
+  content: "11";
+}
+
+.intro__item:nth-child(12)::before {
+  content: "12";
+}
+
+.intro__item:nth-child(13)::before {
+  content: "13";
+}
+
+.intro__item:nth-child(14)::before {
+  content: "14";
+}
+
 .intro__img {
   display: inline-block;
   vertical-align: middle;
@@ -965,7 +1029,7 @@ img {
     margin: 0 -20px;
   }
   .intro__item {
-    margin: 0 20px 110px;
+    margin: 0 20px 120px;
   }
 }
 
@@ -974,7 +1038,7 @@ img {
     padding: 45px 0;
   }
   .intro__title {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     font-size: 30px;
   }
 }
@@ -1117,6 +1181,60 @@ img {
   .site-footer__text {
     font-size: 16px;
     line-height: 21px;
+  }
+}
+
+.sezon__container--bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #000;
+  padding: 44px;
+}
+
+.sezon-number {
+  font-size: 96px;
+  line-height: 60px;
+  margin-right: 30px;
+}
+
+.sezon-number--span {
+  display: block;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+}
+
+.sezon-box {
+  max-width: 1200px;
+}
+
+.sezon-text {
+  font-size: 14px;
+  line-height: 21px;
+}
+
+@media only screen and (max-width: 1150px) {
+  .sezon__container--bottom {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .hero-sezon {
+    padding: 108px 0 260px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .hero-sezon {
+    padding: 78px 0 140px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .hero-sezon {
+    padding: 30px 0 120px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
