--- a/scss/blocks/_intro.scss
+++ b/scss/blocks/_intro.scss
@@ -3,7 +3,7 @@
 }
 .intro__title {
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 150px;
   font-size: 36px;
   line-height: 42px;
 
@@ -20,12 +20,12 @@
   margin: 0 37.5px;
   padding: 0px 0 0px;
   position: relative;
-  margin-bottom: 110px;
+  margin-bottom: 120px;
   &::before {
     content: "00";
     display: inline-block;
     position: absolute;
-    top: -10px;
+    top: -20px;
     left: 0;
     font-weight: bold;
     font-size: 96px;
@@ -69,6 +69,30 @@
   &:nth-child(6)::before {
     content: "06";
   }
+  &:nth-child(7)::before {
+    content: "07";
+  }
+  &:nth-child(8)::before {
+    content: "08";
+  }
+  &:nth-child(9)::before {
+    content: "09";
+  }
+  &:nth-child(10)::before {
+    content: "10";
+  }
+  &:nth-child(11)::before {
+    content: "11";
+  }
+  &:nth-child(12)::before {
+    content: "12";
+  }
+  &:nth-child(13)::before {
+    content: "13";
+  }
+  &:nth-child(14)::before {
+    content: "14";
+  }
 }
 .intro__img {
   display: inline-block;
@@ -95,7 +119,7 @@
     margin: 0 -20px;
   }
   .intro__item {
-    margin: 0 20px 110px;
+    margin: 0 20px 120px;
   }
 }
 @include breakpoint-down (1000) {
@@ -103,7 +127,7 @@
     padding: 45px 0;
   }
   .intro__title {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     font-size: 30px;
   }
 }
