--- a/scss/blocks/_site-header.scss
+++ b/scss/blocks/_site-header.scss
@@ -4,6 +4,12 @@
   background-position: center 65px;
   background-size: cover;
 }
+.header--sezon-1 {
+  background-image: url("../img/sezon-1-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center 65px;
+  background-size: cover;
+}
 .site-header {
   padding: 50px 0 58px;
   background-image: linear-gradient(180deg, #111213 0%, #111213 43.62%, rgba(32, 31, 33, 0) 86.33%);
