--- a/css/styles.css
+++ b/css/styles.css
@@ -631,7 +631,7 @@ img {
   padding: 178px 0 360px;
 }
 
-.hero .hero__container {
+.hero__container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -644,25 +644,25 @@ img {
 }
 
 @media only screen and (max-width: 1150px) {
-  .hero .sezon__container--bottom {
+  .sezon__container--bottom {
     display: none;
   }
 }
 
 @media only screen and (max-width: 1000px) {
-  .hero .hero {
+  .hero {
     padding: 120px 0 282px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .hero .hero {
+  .hero {
     padding: 80px 0 180px;
   }
 }
 
 @media only screen and (max-width: 450px) {
-  .hero .hero {
+  .hero {
     padding: 40px 0 100px;
   }
 }
